--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,3 +1,6 @@
 <% provide(:title, "Top") %>
-<h1>トップページ</h1>
-<p>勤怠管理システムのトップページ</p>
+<div class="center jumbotron">
+  <h1>勤怠システム</h1>
+  <%= link_to "ログイン", "#", class: "btn btn-primary btn-login" %>
+  <p>アカウント作成は<%= link_to "こちら", signup_path %>から</p>
+</div>
