--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer id="footer">
   <div class="text-left">
-    The Ruby on Rails Tutorial
+    <h6>The Ruby on Rails Tutorial</h6>
       <ul>
         <li class="text-right">
         <li>About</li>
