--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,12 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
+      <%flash.each do |message_type, msg| %>
+        <div class="alert alert-<%= message_type %>"><%= msg %></div>
+      <% end %>
       <%= yield %>
-    <%= render 'layouts/footer' %>
+      <%= debug(params) if Rails.env.development? %> 
     </div>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
