Finish editing-users

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -12,3 +12,15 @@
 .btn-login {
   margin-top: 10px;
 }
+
+.label-user--edit {
+  margin-top: 10px;
+}
+
+.btn-user--edit {
+  margin-top: 1em;
+}
+
+#table-users {
+  vertical-align: middle;
+}
