--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,14 +5,19 @@
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to "トップへ", root_path %></li>
           <% if logged_in? %>
-          <li><%= link_to "ユーザー一覧", users_path %></li>
+            <% if current_user.admin? %>
+              <li><%= link_to "ユーザー一覧", users_path %></li>
+            <% end %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" >
-              アカウント<b class="caret"></b>
+             アカウント<b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to "勤怠", current_user %></li>
               <li><%= link_to "設定", edit_user_path(current_user) %></li>
+              <% if current_user.admin? %>
+                <li><%= link_to "基本情報設定", edit_basic_info_user_path(current_user) %></li>
+              <% end %>
               <li class="divider" %></li>
                 <li><%= link_to "ログアウト", logout_path, method: :delete %></li>
             </ul>
