--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,6 +1,10 @@
 <% provide(:title, "Top") %>
 <div class="center jumbotron">
   <h1>勤怠システム</h1>
-  <%= link_to "ログイン", login_path, class: "btn btn-primary btn-login" %>
-  <p>アカウント作成は<%= link_to "こちら", signup_path %>から</p>
+  <% if logged_in? %>
+    <%= link_to "ログイン中", "#", class: "btn btn-primary btn-login", disabled: "disabled" %>
+  <% else %>
+    <%= link_to "ログイン", login_path, class: "btn btn-primary btn-login" %>
+    <p>アカウント作成は<%= link_to "こちら", signup_path %>から</p>
+  <% end %>
 </div>
