--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -24,3 +24,19 @@
 #table-users {
   vertical-align: middle;
 }
+
+#table-attendances {
+  th {
+    vertical-align: middle;
+    text-align: center;
+  }
+  
+  td {
+    vertical-align: middle;
+    text-align: center;
+  }
+}
+
+.sat {
+  color: blue;
+}
