--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,58 @@
 <% provide(:title, @user.name) %>
 <div class="row">
   <table class="table table-bordered table-condensed">
-    <thead>
       <tr>
-        <td>時間管理表</td>
+        <td>[<%= l(@first_day, format: :middle) %>]勤怠管理表</td>
         <td>指定勤務時間：<%= format_basic_info(@user.work_time) %> </td>
         <td>基本時間：<%= format_basic_info(@user.basic_time) %></td>
-        <td>月初日</td>
+        <td>月初日：<%= l(@first_day, format: :short) %></td>
       </tr>
       <tr>
         <td>所属：<%= @user.department.present? ? @user.department : "未所属" %></td>
         <td>名前：<%= @user.name %></td>
         <td>出勤日数</td>
-        <td>月末日</td>
+        <td>月末日：<%= l(@last_day, format: :short) %></td>
+      </tr>
+  </table>
+</div>
+
+<div class="btn-users-show" %>
+  <%= link_to "勤怠を編集", "#", class: "btn btn-default" %>
+
+<div>
+  <table class="table table-bordered table-condensed table-hover" id="table-attendances">
+    <thead>
+      <tr>
+        <th>日付</th>
+        <th>曜日</th>
+        <th>勤怠登録</th>
+        <th>出勤時間</th>
+        <th>退勤時間</th>
+        <th>在社時間</th>
+        <th>備考</th>
       </tr>
     </thead>
+    
+    <tbody>
+      <% @attendances.each do |day| %>
+      <% 
+        css_class = case $days_of_the_week[day.worked_on.wday]
+        when '土'
+        'text-primary'
+        when '日'
+        'text-danger'
+        end
+      %>
+      <tr>
+        <td><%= l(day.worked_on,  format: :short) %></td>
+        <td class="<%= css_class %>"><%= $days_of_the_week[day.worked_on.wday] %></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <% end %>
+    </tbody>
   </table>
 </div>
